# Rover

cmake_starter/: CMakeLists.txt
cmake_starter/app/: CMakeLists.txt
cmake_starter/app/include/: camera.h  controller.h  delaytime.h  udpServer.h
cmake_starter/app/src/: camera.c  controller.c  delaytime.c  main.c  udpServer.c
cmake_starter/hal/: CMakeLists.txt
cmake_starter/hal/include/: joystick.h  rotation.h  shutdown.h  system.h  xboxController.h
cmake_starter/hal/src/: joystick.c  rotation.c  shutdown.c  system.c  xboxController.c
cmake_starter/my-nodejs-app/: package-lock.json  package.json  routes.js  server.js  socket.js  udpSocket.js
cmake_starter/my-nodejs-app/public/: index.html  script.js  style.css
